frontend/test/should_pass/index_resolving_failure_when_indices_and_entities_symbol_tables_are_accessed.gm
node class M
{
	i : int;
}

node class N
{
	x : int;
}

index i { N.x }
