frontend/test/should_fail/computations_no_assign_func_methodn.gm
node class N
{
	x:int;
}

node class NN
{
	function bar(n:N) : int
	{
		n.x = 42;
		return(n.x);
	}
}
